--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
     <meta
       name="description"
-      content="Interactive portfolio showcasing my work and skills"
+      content="JP Portfolio - A showcase of my work and skills"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Interactive Portfolio</title>
+    <title>JP Portfolio</title>
+    <style>
+      .logo-svg {
+        width: 32px;
+        height: 32px;
+        position: fixed;
+        top: 16px;
+        left: 16px;
+        z-index: 1000;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
